Fix wrong types for explosion_resistance and destroy_time.