@@ -49,8 +49,8 @@ public class BlockBuilder extends BaseBuilder<IFlexBlock>
     private Boolean hasCollision;
     private Boolean randomTicks;
     private Integer lightEmission;
-    private Integer explosionResistance;
-    private Integer destroyTime;
+    private Float explosionResistance;
+    private Float destroyTime;
     private Float friction;
     private Float speedFactor;
     private Float jumpFactor;
@@ -176,12 +176,12 @@ public class BlockBuilder extends BaseBuilder<IFlexBlock>
         this.lightEmission = lightEmission;
     }
 
-    public void setExplosionResistance(int explosionResistance)
+    public void setExplosionResistance(float explosionResistance)
     {
         this.explosionResistance = explosionResistance;
     }
 
-    public void setDestroyTime(int destroyTime)
+    public void setDestroyTime(float destroyTime)
     {
         this.destroyTime = destroyTime;
     }
@@ -222,8 +222,8 @@ public class BlockBuilder extends BaseBuilder<IFlexBlock>
         if (!Utils.orElse(hasCollision(), true)) props.noCollission();
         if (Utils.orElse(hasRandomTicks(), false)) props.randomTicks();
         if (Utils.orElse(getLightEmission(), 0) > 0) props.lightLevel(state -> getLightEmission());
-        if (Utils.orElse(getExplosionResistance(), 0) > 0) props.explosionResistance(getExplosionResistance());
-        if (Utils.orElse(getDestroyTime(), 0) > 0) props.destroyTime(getDestroyTime());
+        if (Utils.orElse(getExplosionResistance(), 0.0f) > 0.0f) props.explosionResistance(getExplosionResistance());
+        if (Utils.orElse(getDestroyTime(), 0.0f) > 0.0f) props.destroyTime(getDestroyTime());
         if (Utils.orElse(getFriction(), 0.6f) != 0.6f) props.friction(getFriction());
         if (Utils.orElse(getSpeedFactor(), 1.0f) != 1) props.speedFactor(getSpeedFactor());
         if (Utils.orElse(getJumpFactor(), 1.0f) != 1) props.jumpFactor(getSpeedFactor());
@@ -240,7 +240,7 @@ public class BlockBuilder extends BaseBuilder<IFlexBlock>
                 if (p.getName().equals(prop.getName())) return true;
             }
             return false;
-        }).collect(Collectors.toList());
+        }).toList();
         if (badProperties.size() > 0)
         {
             throw new IllegalStateException("The block of type " + blockType + " cannot define non-duplicate properties with clashing names: " + badProperties.stream().map(Property::getName).collect(Collectors.joining(" ")));
@@ -447,13 +447,13 @@ public class BlockBuilder extends BaseBuilder<IFlexBlock>
     }
 
     @Nullable
-    public Integer getExplosionResistance()
+    public Float getExplosionResistance()
     {
         return getValueWithParent(explosionResistance, BlockBuilder::getExplosionResistance);
     }
 
     @Nullable
-    public Integer getDestroyTime()
+    public Float getDestroyTime()
     {
         return getValueWithParent(destroyTime, BlockBuilder::getDestroyTime);
     }
